# cyphal_communicator

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  compile_dsdl.sh  install_requirements.sh  package.xml  requirements.txt
.github/workflows/: catkin_build.yml  dsdl.yml
docker/: Dockerfile  docker.sh
launch/: cyphal_communicator.launch
scripts/: Dockerfile  config.sh  create_slcan.sh  create_slcan_from_serial.sh  cyphal_communicator.py  docker.sh  generate_cpp_from_dsdl.sh  generate_python_from_dsdl.sh  install.sh
src/: README.md  git_hash.h  git_software_version.h  main.cpp  main.h  math.cpp  math.hpp  params.cpp  params.hpp  string_params.hpp
src/autopilot_interface/: cyphal_hitl.cpp  cyphal_hitl.hpp  git_software_version.h  params.cpp  params.hpp
src/nunavut_out/ds015/physics/kinematics/geodetic/: Point_0_1.h
src/nunavut_out/ds015/service/gnss/: Covariance_0_1.h  Gnss_0_1.h  RelativePosition_0_1.h  Status_0_1.h
src/nunavut_out/reg/udral/physics/acoustics/: Note_0_1.h
src/nunavut_out/reg/udral/physics/electricity/: PowerTs_0_1.h  Power_0_1.h  SourceTs_0_1.h  Source_0_1.h
src/nunavut_out/reg/udral/physics/optics/: HighColor_0_1.h
src/nunavut_out/reg/udral/physics/thermodynamics/: PressureTempVarTs_0_1.h
src/nunavut_out/reg/udral/physics/time/: TAI64VarTs_0_1.h  TAI64Var_0_1.h  TAI64_0_1.h
src/nunavut_out/reg/udral/service/battery/: Error_0_1.h  Parameters_0_3.h  Status_0_2.h  Technology_0_1.h  _0_1.h
src/nunavut_out/reg/udral/service/common/: Heartbeat_0_1.h  Readiness_0_1.h
src/nunavut_out/reg/udral/service/sensor/: Status_0_1.h
src/nunavut_out/uavcan/_register/: Access_1_0.h  List_1_0.h  Name_1_0.h  Value_1_0.h
src/nunavut_out/uavcan/diagnostic/: Record_1_0.h  Record_1_1.h  Severity_1_0.h
src/nunavut_out/uavcan/file/: Error_1_0.h  GetInfo_0_1.h  GetInfo_0_2.h  List_0_1.h  List_0_2.h  Modify_1_0.h  Modify_1_1.h  Path_1_0.h  Path_2_0.h  Read_1_0.h  Read_1_1.h  Write_1_0.h  Write_1_1.h
src/nunavut_out/uavcan/internet/udp/: HandleIncomingPacket_0_1.h  HandleIncomingPacket_0_2.h  OutgoingPacket_0_1.h  OutgoingPacket_0_2.h
src/nunavut_out/uavcan/metatransport/can/: ArbitrationID_0_1.h  BaseArbitrationID_0_1.h  DataClassic_0_1.h  DataFD_0_1.h  Error_0_1.h  ExtendedArbitrationID_0_1.h  Frame_0_1.h  Frame_0_2.h  Manifestation_0_1.h  RTR_0_1.h
src/nunavut_out/uavcan/metatransport/ethernet/: EtherType_0_1.h  Frame_0_1.h
src/nunavut_out/uavcan/metatransport/serial/: Fragment_0_1.h  Fragment_0_2.h
src/nunavut_out/uavcan/metatransport/udp/: Endpoint_0_1.h  Frame_0_1.h
src/nunavut_out/uavcan/node/: ExecuteCommand_1_0.h  ExecuteCommand_1_1.h  GetInfo_1_0.h  GetTransportStatistics_0_1.h  Health_1_0.h  Heartbeat_1_0.h  ID_1_0.h  IOStatistics_0_1.h  Mode_1_0.h  Version_1_0.h
src/nunavut_out/uavcan/node/port/: ID_1_0.h  List_0_1.h  List_1_0.h  ServiceIDList_0_1.h  ServiceIDList_1_0.h  ServiceID_1_0.h  SubjectIDList_0_1.h  SubjectIDList_1_0.h  SubjectID_1_0.h
src/nunavut_out/uavcan/pnp/: NodeIDAllocationData_1_0.h  NodeIDAllocationData_2_0.h
src/nunavut_out/uavcan/pnp/cluster/: AppendEntries_1_0.h  Discovery_1_0.h  Entry_1_0.h  RequestVote_1_0.h
src/nunavut_out/uavcan/primitive/: Empty_1_0.h  String_1_0.h  Unstructured_1_0.h
src/nunavut_out/uavcan/primitive/array/: Bit_1_0.h  Integer16_1_0.h  Integer32_1_0.h  Integer64_1_0.h  Integer8_1_0.h  Natural16_1_0.h  Natural32_1_0.h  Natural64_1_0.h  Natural8_1_0.h  Real16_1_0.h  Real32_1_0.h  Real64_1_0.h
src/nunavut_out/uavcan/primitive/scalar/: Bit_1_0.h  Integer16_1_0.h  Integer32_1_0.h  Integer64_1_0.h  Integer8_1_0.h  Natural16_1_0.h  Natural32_1_0.h  Natural64_1_0.h  Natural8_1_0.h  Real16_1_0.h  Real32_1_0.h  Real64_1_0.h
src/nunavut_out/uavcan/si/sample/acceleration/: Scalar_1_0.h  Vector3_1_0.h
src/nunavut_out/uavcan/si/sample/angle/: Quaternion_1_0.h  Scalar_1_0.h
src/nunavut_out/uavcan/si/sample/angular_acceleration/: Scalar_1_0.h  Vector3_1_0.h
src/nunavut_out/uavcan/si/sample/angular_velocity/: Scalar_1_0.h  Vector3_1_0.h
src/nunavut_out/uavcan/si/sample/duration/: Scalar_1_0.h  WideScalar_1_0.h
src/nunavut_out/uavcan/si/sample/electric_charge/: Scalar_1_0.h
src/nunavut_out/uavcan/si/sample/electric_current/: Scalar_1_0.h
src/nunavut_out/uavcan/si/sample/energy/: Scalar_1_0.h
src/nunavut_out/uavcan/si/sample/force/: Scalar_1_0.h  Vector3_1_0.h
src/nunavut_out/uavcan/si/sample/frequency/: Scalar_1_0.h
src/nunavut_out/uavcan/si/sample/length/: Scalar_1_0.h  Vector3_1_0.h  WideScalar_1_0.h  WideVector3_1_0.h
src/nunavut_out/uavcan/si/sample/luminance/: Scalar_1_0.h
src/nunavut_out/uavcan/si/sample/magnetic_field_strength/: Scalar_1_0.h  Scalar_1_1.h  Vector3_1_0.h  Vector3_1_1.h
src/nunavut_out/uavcan/si/sample/magnetic_flux_density/: Scalar_1_0.h  Vector3_1_0.h
src/nunavut_out/uavcan/si/sample/mass/: Scalar_1_0.h
src/nunavut_out/uavcan/si/sample/power/: Scalar_1_0.h
src/nunavut_out/uavcan/si/sample/pressure/: Scalar_1_0.h
src/nunavut_out/uavcan/si/sample/temperature/: Scalar_1_0.h
src/nunavut_out/uavcan/si/sample/torque/: Scalar_1_0.h  Vector3_1_0.h
src/nunavut_out/uavcan/si/sample/velocity/: Scalar_1_0.h  Vector3_1_0.h
src/nunavut_out/uavcan/si/sample/voltage/: Scalar_1_0.h
src/nunavut_out/uavcan/si/sample/volume/: Scalar_1_0.h
src/nunavut_out/uavcan/si/unit/mass/: Scalar_1_0.h
src/nunavut_out/uavcan/time/: GetSynchronizationMasterInfo_0_1.h  Synchronization_1_0.h  SynchronizedTimestamp_1_0.h  TAIInfo_0_1.h  TimeSystem_0_1.h
src/simulator_interface/: simulator_interface.hpp
src/simulator_interface/ap_json/: README.md  ap_json.cpp  ap_json.hpp
src/simulator_interface/ros_interface/: README.md  ros_interface.cpp  ros_interface.hpp
(+88 files in other folders)
